--- a/css/style.css
+++ b/css/style.css
@@ -5021,6 +5021,7 @@ input[type="checkbox"].error { box-shadow: 0px 0px 0px 1px rgb(255 0 0), 1px 1px
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    margin-bottom: 5px;
 }
 
 .banner-title{
